Add the waveform example and scale frames into RNNoise's int16 range
examples/waveform is a Kotlin Multiplatform ImGui/ImPlot viewer that draws the
raw capture and the denoised signal on a sliding window: JVM, native
executables, and an Android app whose libmain.so SDLActivity loads - which is
why rnnoise-kmp now publishes androidNative targets (NDK cross-compiled static
library embedded in the cinterop klib). Window length, noise colour and noise
level are sliders; capture comes from audio-io-kmp and rendering from the SDL
backends imgui-kmp publishes.

The example module becomes examples/basic, and Kotlin moves to 2.4.10, which
the imgui-kmp / sdl-kmp / audio-io-kmp artifact metadata requires.

processFrame now scales the -1..1 frame into the int16 range RNNoise is trained
and gated on and scales the result back out. Without it, every frame below
RNNoise's silence gate bypassed the model entirely, so denoising did nothing at
microphone levels while appearing to work near full scale.

Version 1.0.2.